# contentforge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NORTH_STAR.md  README.md  ROADMAP.md  release-please-config.json
.github/workflows/: ci.yml  docs.yml  release.yml
crates/contentforge-agent/: Cargo.toml
crates/contentforge-agent/src/: lib.rs
crates/contentforge-analytics/: Cargo.toml
crates/contentforge-analytics/src/: lib.rs
crates/contentforge-api/: Cargo.toml
crates/contentforge-api/src/: lib.rs
crates/contentforge-app/: Cargo.toml
crates/contentforge-app/src/: main.rs
crates/contentforge-cli/: Cargo.toml
crates/contentforge-cli/src/: lib.rs
crates/contentforge-core/: Cargo.toml
crates/contentforge-core/src/: content.rs  error.rs  lib.rs  platform.rs  schedule.rs
crates/contentforge-db/: Cargo.toml
crates/contentforge-db/src/: lib.rs  migrations.rs  repo.rs
crates/contentforge-db/src/migrations/: 001_initial.sql
crates/contentforge-mcp/: Cargo.toml
crates/contentforge-mcp/src/: lib.rs
crates/contentforge-publish/: Cargo.toml
crates/contentforge-publish/src/: lib.rs
crates/contentforge-publish/src/adapters/: devto.rs  linkedin.rs  medium.rs  mod.rs  twitter.rs
crates/contentforge-schedule/: Cargo.toml
crates/contentforge-schedule/src/: lib.rs
crates/contentforge-tui/: Cargo.toml
crates/contentforge-tui/src/: lib.rs
docs/: LAUNCH_MANUAL.md  LAUNCH_PLAN.md  SESSION_REPORT.md
docs/architecture/: ARCHITECTURE.md
docs/research/: 01-market-validation-results.md  02-competitive-analysis-results.md  03-pricing-monetization-results.md  04-platform-apis-results.md  05-mcp-adoption-results.md
docs/research/prompts/: 01-market-validation.md  02-competitive-analysis.md  03-pricing-monetization.md  04-platform-apis.md  05-mcp-adoption.md  06-rust-launch-strategy.md
site/: mkdocs.yml
site/docs/: index.md
site/docs/guide/: platforms.md
