[package]
name = "contentforge-agent"
description = "AI agent pipeline for content generation and adaptation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
contentforge-core = { path = "../contentforge-core" }

rig-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
uuid = { workspace = true }
