[package]
name = "contentforge-cli"
description = "CLI subcommands for ContentForge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
contentforge-core = { path = "../contentforge-core" }
contentforge-db = { path = "../contentforge-db" }
contentforge-publish = { path = "../contentforge-publish" }
contentforge-pipeline = { path = "../contentforge-pipeline" }

cron = { workspace = true }
rusqlite = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
